p2/config/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-one
spec:
  ports:
  - port: 80
    targetPort: 2121
  selector:
    app: app-one
---
apiVersion: v1
kind: Service
metadata:
  name: app-two
spec:
  ports:
  - port: 80
    targetPort: 2121
  selector:
    app: app-two
---
apiVersion: v1
kind: Service
metadata:
  name: app-three
spec:
  ports:
  - port: 80
    targetPort: 2121
  selector:
    app: app-three
